# donsus

./: CMakeLists.txt  README.md  ideas.txt
Donsus/: main.c
Donsus/error/: lexer_error.c
Donsus/src/: don_array.c  handle_file.c
Donsus/src/parser/: parser.c
Donsus/src/parser/lexer/: lexer.c  token.c
GRAMMAR/: TOKENS
Include/: Donsus.h  don_array.h  lexer.h  lifecycle.h  parser.h  token.h
Include/internal/: ducore_file.h  ducore_init.h
Include/internal/error/: lexer_error.h
Include/test/: test.h
Modules/: main.c
Tools/dontest/: dontest.c  main.c
test/: test.c
tests/: test_lexer.c
